# agentic

./: .gitignore  README.md  SECURITY_AUDIT.md  ecosystem.config.cjs  payload.json  vps-setup.sh
.github/workflows/: deploy.yml
backend/: package-lock.json  package.json  tsconfig.tsbuildinfo
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260218013007_init/: migration.sql
backend/scripts/: seed_flow.ts
backend/src/: index.ts
backend/src/api/: auth.controller.ts  automation.controller.ts  bot.controller.ts  client.controller.ts  events.controller.ts  execution.controller.ts  flow.controller.ts  logs.controller.ts  session.controller.ts  tool.controller.ts  trigger.controller.ts  webhook.controller.ts
backend/src/middleware/: auth.middleware.ts
backend/src/services/: auth.service.ts  baileys.service.ts  conversation.service.ts  event-bus.ts  outgoing-stream.consumer.ts  queue.service.ts  stream.service.ts  system-logger.ts
backend/src/workers/: message.worker.ts
core/: Cargo.toml
core/src/: flow_engine.rs  lib.rs  main.rs  matcher.rs  processors.rs
core/src/models/: db.rs  mod.rs
core/tests/: db_integration.rs  e2e_roundtrip.rs
deploy/: agentic-backend.service  agentic-core.service
docs/: PLAN-SSE-REALTIME.md
frontend/src/components/: BotConnection.astro  MediaPicker.astro  Sidebar.astro
frontend/src/i18n/: en.ts  es.ts  index.ts
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  events.ts
frontend/src/pages/: ads.astro  editor.astro  index.astro  login.astro  logs.astro  tool-editor.astro
(+17 files in other folders)
